TOAZ-203 LZ Reader does not filter by LZ ID when listing the resources by Tag